--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mq4-hover-shim": "^0.3.0",
     "rimraf": "^2.4.3",
     "style-sherpa": "^1.0.0",
+    "tether": "^1.3.2",
     "what-input": "^2.0.1",
     "yargs": "^3.8.0"
   },
