--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bootstrap4-gulp-nunjucks",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Template for Bootstrap 4.",
   "main": "gulpfile.js",
   "scripts": {
@@ -17,6 +17,7 @@
   ],
   "devDependencies": {
     "babel-core": "^6.3.17",
+    "babel-eslint": "^6.1.2",
     "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
     "babel-plugin-transform-es2015-block-scoped-functions": "^6.5.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.5.0",
@@ -29,7 +30,7 @@
     "babel-plugin-transform-es2015-template-literals": "^6.5.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
-    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap": "^4.0.0-alpha.3",
     "browser-sync": "^2.13.0",
     "font-awesome": "^4.6.3",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -41,15 +42,15 @@
     "gulp-data": "^1.2.1",
     "gulp-extname": "^0.2.0",
     "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.2.1",
+    "gulp-imagemin": "^3.0.2",
     "gulp-load-plugins": "^1.1.0",
     "gulp-nunjucks-api": "^0.7.0",
     "gulp-postcss": "^6.1.1",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-uglify": "^1.2.0",
+    "gulp-uglify": "^2.0.0",
     "gulp-uncss": "^1.0.1",
-    "jquery": "^2.2.3",
+    "jquery": "^2.2.4",
     "jquery.cookie": "^1.4.1",
     "js-yaml": "^3.4.6",
     "lodash": "^4.13.1",
@@ -57,8 +58,8 @@
     "rimraf": "^2.4.3",
     "style-sherpa": "^1.0.0",
     "tether": "^1.3.2",
-    "what-input": "^2.0.1",
-    "yargs": "^3.8.0"
+    "what-input": "^3.0.0",
+    "yargs": "^4.8.1"
   },
   "repository": {
     "type": "git",
