--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
-    "gulp-cli": "gulpjs/gulp-cli#4.0",
+    "gulp-cli": "^1.2.1",
     "gulp-concat": "^2.5.2",
     "gulp-cssnano": "^2.1.0",
     "gulp-data": "^1.2.1",
