--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp",
-    "build": "gulp build --production"
+    "sass": "gulp sass"
   },
   "author": "satoru4kata",
   "license": "MIT",
@@ -16,50 +16,35 @@
     "scss"
   ],
   "devDependencies": {
-    "babel-core": "^6.3.17",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
-    "babel-plugin-transform-es2015-block-scoped-functions": "^6.5.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.5.0",
-    "babel-plugin-transform-es2015-classes": "^6.5.2",
-    "babel-plugin-transform-es2015-destructuring": "^6.5.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
-    "babel-plugin-transform-es2015-parameters": "^6.5.0",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
-    "babel-plugin-transform-es2015-spread": "^6.5.2",
-    "babel-plugin-transform-es2015-template-literals": "^6.5.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
-    "bootstrap": "^4.0.0-alpha.3",
+    "bootstrap": "^4.1.3",
     "browser-sync": "^2.13.0",
+    "del": "^3.0.0",
     "font-awesome": "^4.6.3",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-cli": "^1.2.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-clean-css": "^3.10.0",
+    "gulp-cli": "^2.0.1",
     "gulp-concat": "^2.5.2",
     "gulp-cssnano": "^2.1.0",
     "gulp-data": "^1.2.1",
     "gulp-extname": "^0.2.0",
     "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^3.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.1.0",
-    "gulp-nunjucks-api": "^0.7.0",
-    "gulp-postcss": "^6.1.1",
-    "gulp-sass": "^2.1.0",
+    "gulp-nunjucks-render": "^2.2.2",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.0.0-alpha",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^3.0.1",
     "gulp-uncss": "^1.0.1",
-    "jquery": "^2.2.4",
+    "jquery": "^3.3.1",
     "jquery.cookie": "^1.4.1",
-    "js-yaml": "^3.4.6",
-    "lodash": "^4.13.1",
-    "mq4-hover-shim": "^0.3.0",
+    "nunjucks-tag-spaceless": "^1.0.0",
+    "popper.js": "^1.14.4",
+    "postcss-cssnext": "^3.1.0",
     "rimraf": "^2.4.3",
-    "style-sherpa": "^1.0.0",
-    "tether": "^1.3.2",
-    "what-input": "^3.0.0",
-    "yargs": "^4.8.1"
+    "run-sequence": "^2.2.1",
+    "yargs": "^12.0.2"
   },
   "repository": {
     "type": "git",
